# MarketingRL

./: .env.example  .gitignore  Dockerfile  README.md  inference.py  my_env_v4.py  openenv.yaml  pyproject.toml  requirements.txt
scripts/: run_baseline.py
server/: app.py
src/marketing_openenv/: __init__.py  agent_policy.py  app.py  baseline.py  env.py  graders.py  models.py  tasks.py
tests/: test_environment_quality.py
